fix : solucionar problema con el overflow en la seccion mi perfil

--- a/client/src/Components/MiPerfil/MiPerfil.css
+++ b/client/src/Components/MiPerfil/MiPerfil.css
@@ -8,7 +8,7 @@
     gap: 5rem;
     padding: 7rem 2rem 0 2rem;
     height: 100%;
-    overflow: auto !important;
+    overflow: hidden;
   }
   
   .image-container {
